website/websites/gp4/code/knucleotide-scala.log
BUILD COMMANDS FOR: knucleotide.scala

Wed Mar 21 16:01:55 PDT 2007

( if [ ! -d knucleotide.scala_run ] ; then mkdir knucleotide.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/knucleotide/knucleotide.scala knucleotide.scala_run/knucleotide.scala
( cd knucleotide.scala_run ; /opt/scala-2.4.0/bin/scalac knucleotide.scala )
knucleotide.scala:75: error: value printf is not a member of object java.io.Console
         Console.printf("{0} {1,number,0.000}\n", a.key, a.value / n * 100.0)
                ^
knucleotide.scala:77: error: value println is not a member of object java.io.Console
      Console.println
             ^
knucleotide.scala:82: error: value println is not a member of object java.io.Console
      Console.println( bag.findOccurrences(fragment) + "\t" + fragment )
             ^
knucleotide.scala:94: error: value isEmpty is not a member of Counter[A]
      while (!bucket.isEmpty) {
                    ^
knucleotide.scala:95: error: value head is not a member of Counter[A]
         if (elemEquals(entryKey(bucket.head), elem)){
                                       ^
knucleotide.scala:96: error: value head is not a member of Counter[A]
            bucket.head.inc
                  ^
knucleotide.scala:99: error: value tail is not a member of Counter[A]
         bucket = bucket.tail
                        ^
knucleotide.scala:106: error: value isEmpty is not a member of Counter[A]
      while (!bucket.isEmpty) {
                    ^
knucleotide.scala:107: error: value head is not a member of Counter[A]
         if (elemEquals(entryKey(bucket.head), elem)){
                                       ^
knucleotide.scala:108: error: value head is not a member of Counter[A]
            return bucket.head.value
                         ^
knucleotide.scala:110: error: value tail is not a member of Counter[A]
         bucket = bucket.tail
                        ^
11 errors found
make[3]: [knucleotide.scala_run] Error 1 (ignored)
touch knucleotide.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath knucleotide.scala_run knucleotide %A
************************************************************
*   TEST (knucleotide.scala_run) FAILED - ERROR:  knucleotide.scala_out differs from Output.10000
************************************************************
-rw-r--r-- 1 dunham users 245 Dec 29 20:51 Output.10000
-rw-r--r-- 1 dunham users  26 Mar 21 16:02 knucleotide.scala_out


PROGRAM OUTPUT
==============
no such file: knucleotide
